[project]
name = "my-first-mcp-server"
version = "0.1.0"
description = "MCP server for intelligent dataset analysis and column similarity detection"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.12.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "fuzzywuzzy>=0.18.0",
    "python-levenshtein>=0.12.0",
    "matplotlib>=3.7.0",
    "biopython>=1.80",
]
